# helix-v2

./: AGENT.md  README.md  package-lock.json  package.json  playwright.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: design.md  milestones.md  publishing.md
scripts/: bump-version.ps1  cargo-codesign.sh  fix-dev-keychain.sh  setup-dev-signing.sh
src/: index.html  main.js  styles.css  theme-bootstrap.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  coordinator.rs  db.rs  github.rs  lib.rs  main.rs  settings.rs  sync.rs
src/js/: account.js  api.js  constants.js  dom.js  format.js  inbox-model.js  inbox-view.js  inbox.js  menu.js  modules-model.js  modules.js  settings.js  shortcuts.js  sidebar-resize.js  state.js  storage.js  sync.js  ui.js  updates.js
tests/: dom.test.js  format.test.js  inbox-model.test.js  inbox-view.test.js  modules-model.test.js  ui.test.js
tests/e2e/: account.spec.js  inbox.spec.js  keyboard.spec.js  modules.spec.js  serve.js  settings.spec.js  tauri-mock.js
