[package]
name = "helix"
version = "0.1.0"
description = "Helix — manage GitHub notifications and automate workflows"
authors = ["Yoann Chaudet"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on Windows).
name = "helix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite: no system dependency, reproducible builds (see AGENT.md "lightweight first").
rusqlite = { version = "0.40", features = ["bundled"] }
