[package]
name = "helix"
version = "0.1.0"
description = "Helix — manage GitHub notifications and automate workflows"
authors = ["Yoann Chaudet"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on Windows).
name = "helix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite: no system dependency, reproducible builds (see AGENT.md "lightweight first").
rusqlite = { version = "0.40", features = ["bundled"] }
# Secret storage in the macOS login Keychain (keyring v4 split the library into keyring-core
# plus per-platform store crates). PAT is never written to SQLite.
keyring-core = "1"
apple-native-keyring-store = { version = "1", features = ["keychain"] }
# GitHub REST client. macOS-only target → default (native) TLS keeps the dependency
# footprint small (system Secure Transport, no vendored OpenSSL).
reqwest = { version = "0.13", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Translucent NSVisualEffect sidebar — the core "native macOS" cue (vibrant sidebar
# behind an opaque content pane). macOS-only; gated so other targets don't pull it.
# Pinned to 0.6 to match the version Tauri already depends on (avoids building two
# copies of the crate).
window-vibrancy = "0.6"
